[package]
name = "heaven-on-earth"
version = "0.1.0"
authors = ["nyxcode"]

[dependencies]
serde_json = "1.0"
reqwest = "0.8.8"
immeta = "0.4"
job_scheduler = "*"
clap = {version = "2.32", features = ["yaml"]}
log = "0.4"
simplelog = "^0.5.0"
meval = "0.1"
rand = "0.5"
serde_derive = "1.0"
serde = "1.0"
wallpaper = "2.0.0"
dirs = "1.0.4"